# crawler-rs

./: .env.sample  Cargo.toml
src/: main.rs
src/crawler/: crawler.rs  mod.rs  services.rs
src/logger/: logger.rs
src/parser/: links.rs
src/pg/: conn.rs
